@@ -51,6 +51,9 @@ ssl_enabled=false
 # Password used for pkcs12 certificate.
 # password=
 
+#######################################
+# Publish and subscription parameters
+#######################################
 # Max Message Size that a hub server could accept
 # max_message_size=1258291 
 
@@ -124,6 +127,11 @@ ssl_enabled=false
 # Default value is 1000.
 # scan_backoff_ms=1000
 
+# Sets the number of threads to be used for the read-ahead mechanism.
+# Default is the number of cores as returned with a call to 
+# <code>Runtime.getRuntime().availableProcessors()</code>.
+# num_readahead_cache_threads=
+
 ################################
 # Metadata Settings
 ################################
@@ -146,5 +154,8 @@ ssl_enabled=false
 # Ensemble size of a ledger in BookKeeper. Default is 3.
 # bk_ensemble_size=3
 
-# Quorum size of a ledger in BookKeeper. Default is 2.
-# bk_quorum_size=2
+# Write quorum size for a ledger in BookKeeper. Default is 2.
+# bk_write_quorum_size=2
+
+# Ack quorum size for a ledger in BookKeeper. Default is 2.
+# bk_ack_quorum_size=2
